ndb - bug#54685 - release memory if no API connected in Qmgr::execAPI_BROADCAST_REP