storage/ndb/src/kernel/blocks/qmgr/QmgrMain.cpp
@@ -5403,6 +5403,7 @@ Qmgr::execAPI_BROADCAST_REP(Signal* signal)
   if (mask.isclear())
   {
     jam();
+    releaseSections(signal);
     return;
   }
 
